# zigbee-LED-ESP32-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions_c6.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
.cache/clangd/index/: board_config.h.77E5B62C4FDC23F0.idx  board_led.c.AC8FB04C1A5157B4.idx  board_led.h.4EDD421A061C54DE.idx  esp_log.c.604BD9D6D52AA97A.idx  esp_zigbee_aps.h.BAF1C92D1264EECF.idx  esp_zigbee_attribute.h.334B2CD13C863495.idx  esp_zigbee_bdb_commissioning.h.F8FC3D2223F896C0.idx  esp_zigbee_bdb_touchlink.h.EBBA3F413C7A2147.idx  esp_zigbee_cluster.h.8A56A5E064165506.idx  esp_zigbee_core.h.DAADF50B8AF719E5.idx  esp_zigbee_endpoint.h.5CA9788BB9A262E8.idx  esp_zigbee_ha_standard.h.5FCF12B76185D9A2.idx  esp_zigbee_nwk.h.14FF3F99C8F0697A.idx  esp_zigbee_ota.h.7F7AC4841F2A6B49.idx  esp_zigbee_platform.h.D3B832CC6EEF45E1.idx  esp_zigbee_secur.h.94B68404A3E319FB.idx  esp_zigbee_trace.h.FD7D4770ACFFDC3F.idx  esp_zigbee_type.h.8B82B2191F913025.idx  esp_zigbee_version.h.17336BA0D19432AB.idx  esp_zigbee_zcl_alarms.h.6B2815FCB92E35C1.idx  (+68 more)
.github/workflows/: release-on-tag.yml
components/transition_engine/: CMakeLists.txt
main/: CMakeLists.txt  board_config.h  board_led.c  board_led.h  color_conversion.c  color_conversion.h  color_engine.c  color_engine.h  config_api.c  config_api.h  config_storage.c  config_storage.h  idf_component.yml  led_cli.c  led_cli.h  led_driver.c  led_driver.h  led_renderer.c  led_renderer.h  main.c  main.cpp  preset_handler.c  preset_handler.h  preset_manager.c  preset_manager.h  project_defaults.hpp  segment_manager.c  segment_manager.h  version.h  web_server.c  web_server.h  zigbee_attr_handler.c  zigbee_attr_handler.h  zigbee_handlers.c  zigbee_handlers.h  zigbee_init.c  zigbee_init.h  zigbee_signal_handlers.c  zigbee_signal_handlers.h
web/: app.js  index.html  style.css
z2m/: README.md  ota_index.json  zb_led_controller.js
(+2 files in other folders)
